# owlml

./: .gitignore  Dockerfile  Makefile  setup.cfg
.devcontainer/: devcontainer.json
owlml/: __init__.py  __main__.py  api.py  auth.py  datasets.py
