[metadata]
name = owlml
version = 0.1.0
author = Sparrow Computing
author_email = ben@sparrow.dev

# [options]
# install_requires = 
#     fire

[options.extras_require]
dev =
    black
    isort
    pydocstyle
    pylint
    pytest
    pytest-cov
    jupyter

[pylint.FORMAT]
disable = all
enable = unused-import